; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/host/extr_minilua.c_lua_pcall.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/host/extr_minilua.c_lua_pcall.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }
%struct.CallS = type { i32, i32 }

@f_call = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_10__*, i32, i32, i32)* @lua_pcall to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lua_pcall(%struct.TYPE_10__* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.CallS, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %13 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %14 = load i32, i32* %6, align 4
  %15 = add nsw i32 %14, 1
  %16 = call i32 @api_checknelems(%struct.TYPE_10__* %13, i32 %15)
  %17 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @checkresults(%struct.TYPE_10__* %17, i32 %18, i32 %19)
  %21 = load i32, i32* %8, align 4
  %22 = icmp eq i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %4
  store i32 0, i32* %11, align 4
  br label %34

24:                                               ; preds = %4
  %25 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %26 = load i32, i32* %8, align 4
  %27 = call i32 @index2adr(%struct.TYPE_10__* %25, i32 %26)
  store i32 %27, i32* %12, align 4
  %28 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %29 = load i32, i32* %12, align 4
  %30 = call i32 @api_checkvalidindex(%struct.TYPE_10__* %28, i32 %29)
  %31 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %32 = load i32, i32* %12, align 4
  %33 = call i32 @savestack(%struct.TYPE_10__* %31, i32 %32)
  store i32 %33, i32* %11, align 4
  br label %34

34:                                               ; preds = %24, %23
  %35 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %36 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load i32, i32* %6, align 4
  %39 = add nsw i32 %38, 1
  %40 = sub nsw i32 %37, %39
  %41 = getelementptr inbounds %struct.CallS, %struct.CallS* %9, i32 0, i32 0
  store i32 %40, i32* %41, align 4
  %42 = load i32, i32* %7, align 4
  %43 = getelementptr inbounds %struct.CallS, %struct.CallS* %9, i32 0, i32 1
  store i32 %42, i32* %43, align 4
  %44 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %45 = load i32, i32* @f_call, align 4
  %46 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %47 = getelementptr inbounds %struct.CallS, %struct.CallS* %9, i32 0, i32 0
  %48 = load i32, i32* %47, align 4
  %49 = call i32 @savestack(%struct.TYPE_10__* %46, i32 %48)
  %50 = load i32, i32* %11, align 4
  %51 = call i32 @luaD_pcall(%struct.TYPE_10__* %44, i32 %45, %struct.CallS* %9, i32 %49, i32 %50)
  store i32 %51, i32* %10, align 4
  %52 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %53 = load i32, i32* %7, align 4
  %54 = call i32 @adjustresults(%struct.TYPE_10__* %52, i32 %53)
  %55 = load i32, i32* %10, align 4
  ret i32 %55
}

declare dso_local i32 @api_checknelems(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @checkresults(%struct.TYPE_10__*, i32, i32) #1

declare dso_local i32 @index2adr(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @api_checkvalidindex(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @savestack(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @luaD_pcall(%struct.TYPE_10__*, i32, %struct.CallS*, i32, i32) #1

declare dso_local i32 @adjustresults(%struct.TYPE_10__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
